3.33.2
======
Mar 18, 2023
- Fix environment variable overrides for Settings
- Do no load Gwen banner a second time when starting REPL and loading meta unless verbose logging is enabled

3.33.1
======
Mar 16, 2023
- Relax strict and declarative rules when in REPL

3.33.0
======
Mar 15, 2023
- Bind implicit `gwen.stepDef.name` attribute to the currently executing StepDef name

3.32.0
======
Mar 15, 2023
- Add `format --pretty` CLI command for formatting feature and meta files for consistent and tidy Gherkin

3.31.1
======
Mar 14, 2023
- Include exception cause in reported javascript errors
- Reload tab completer when meta is reloaded in REPL
- Disable tab completion in REPL when in paste mode
- Pause node event listeners when at breakpoint in REPL session
- Report unknown input or command when REPL input is not recognised
- Make interpolation of Message annotations lenient
- Dependency udpates
  - Update jline from v2.14.6 to v3.23.0
  - Update log4j-slf4j-impl from v2.19.0 to v2.20.0
  - Update scalatest from v3.2.14 to v3.2.15
  - Update mockito-core from v4.9.0 to v4.11.0

3.31.0
======
Mar 8, 2023
- Softer border colors in HTML reports
- Stronger StepDef indents in HTML reports
- Add new `gwen.report.stepDef.indent.pixels` setting to configure StepDef indent size in HTML reports (default is 30 pixels)

3.30.1
======
Mar 6, 2023
- Fix soft and sustained assertions
- List all errors at summary level in HTML report
- Fix sustained assertion count

3.30.0 
======
Mar 3, 2023
- New feature request gwen-interpreter/gwen-web#103
  - Introduce `load` command in REPL console for reloading changed meta

3.29.7
======
Mar 1, 2023
- Accept meta having no steps

3.29.6
======
Mar 1, 2023
- Fix configured CLI input data option to accept single entry only

3.29.5
======
Feb 25, 2023
- Only require at least one input for dry run when data input file is specified

3.29.4
======
Feb 17, 2023
- Defer initialisation of HTML report file resources until needed

3.29.3
======