@@ -3,6 +3,7 @@
 Mar 18, 2023
 - Fix environment variable overrides for Settings
 - Do no load Gwen banner a second time when starting REPL and loading meta unless verbose logging is enabled
+- Use SpecPrinter to print step on breakpoints
 
 3.33.1
 ======
